[gd_scene load_steps=5 format=3 uid="uid://dbp4qpxqek8ms"]

[ext_resource type="Script" path="res://ui/phone/item_loot_panel/item_loot_panel.gd" id="1_dgjw6"]
[ext_resource type="PackedScene" uid="uid://dhv5wq4lf1ren" path="res://ui/reward_panel/item_pack_viewer.tscn" id="2_djxav"]
[ext_resource type="PackedScene" uid="uid://dfy4agorh33pb" path="res://ui/widgets/equip_hint.tscn" id="3_pbwd1"]
[ext_resource type="Texture2D" uid="uid://8kc7f1ngfdwv" path="res://ui/phone/item_loot_panel/pay_btn.png" id="4_lf5qx"]

[node name="ItemLootPanel" type="MarginContainer"]
offset_right = 552.0
offset_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 10
script = ExtResource("1_dgjw6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CallToActionLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "PICKED UP ITEMS"
horizontal_alignment = 1

[node name="RewardsContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 118)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ItemPackViewer" parent="VBoxContainer/VBoxContainer/RewardsContainer" instance=ExtResource("2_djxav")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipHint" parent="VBoxContainer/VBoxContainer2" instance=ExtResource("3_pbwd1")]
unique_name_in_owner = true
layout_mode = 2

[node name="Extander" type="MarginContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/VBoxContainer2/MarginContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_lf5qx")
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/MarginContainer/CenterContainer/BuyButton" to="." method="_on_buy_btn_pressed"]
